--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
+server.port=8081
+management.security.enabled=true
+management.endpoints.web.exposure.include=health, info, metrics
+info.application.name=Employee Management Application
+
+
 
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:EmployeeDb;
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
